fix: #160 show tags detail discussion page on small screen.
note! not sure whether this will cause any regression. we need to keep an eye on it.

--- a/addons/themes/theme-nexfoundation/src/scss/components/_tags.scss
+++ b/addons/themes/theme-nexfoundation/src/scss/components/_tags.scss
@@ -70,7 +70,7 @@ ul.TagCloud li.TagCloud-Item {
 }
 
 .Box.Tags {
-    display: none;
+    display: block;
     @include lg {
         display: block;
     }
